frame/support/test/tests/pallet_ui/storage_004.stderr
error: pallet::storage unexpected number of generic argument, expect at least 2 args, found none
  --> $DIR/storage_004.rs:19:13
   |
19 |     type Foo = StorageValueType;
   |                ^^^^^^^^^^^^^^^^
